# Threshold-Based-Feature-Selection

./: .gitignore  dask.ipynb  data.py  example-usage.ipynb  multiprocessing.ipynb  pyproject.toml  readme.md  sample-data.csv  tbfs-results.csv
.github/workflows/: ci.yaml
tbfs/: ranker.py
tbfs/multiprocess/: ranker.py
tests/: test_tbfs.py
