[tool.poetry]
name = "tbfs"
version = "0.1.0"
description = ""
authors = ["johnsonj561 <johnsonj561@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.7.0"
jupyterlab = "^3.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
